--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                                     <input type="number" id="utilities" class="form-control" placeholder="Monthly Utilities">  
                                 </div>
                                 <div class="input-group">
-                                    <span class="input-group-addon">$</span>
+                                    <span class="input-group-addon">%</span>
                                     <input type="number" id="pm" class="form-control" placeholder="Property Management">   
                                 </div>
                             </div>
