--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                                 </div>
                                 <div class="input-group">
                                     <span class="input-group-addon">%</span>
-                                    <input type="number" id="interest" class="form-control" step="0.01" placeholder="Intrest Rate">
+                                    <input type="number" id="interest" class="form-control" step="0.01" placeholder="Interest Rate">
                                 </div>
                                 <div class="input-group">
                                     <span class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i></span>
@@ -79,10 +79,10 @@
                                     <span class="input-group-addon">$</span>
                                     <input type="number" id="utilities" class="form-control" placeholder="Monthly Utilities">  
                                 </div>
-                                <div class="input-group">
+                                <!--<div class="input-group">
                                     <span class="input-group-addon">%</span>
                                     <input type="number" id="pm" class="form-control" placeholder="Property Management">   
-                                </div>
+                                </div>-->
                             </div>
                             <h2 class="heading display-7 mt-4 pb-3">Income</h2>
                             <div class="row">
@@ -120,6 +120,21 @@
                                 <div class="input-group">
                                     <span class="input-group-addon">Total Monthly Expenses</span>
                                     <input type="text" id="total-expenses" class="form-control" disabled>
+                                </div>
+                            </div>
+                            <h2 class="heading display-7 mt-4 pb-3">Total Monthly Income</h2>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-addon">70% Occupancy Rate</span>
+                                    <input type="number" id="seventy-percent" class="form-control" disabled>
+                                </div>
+                                <div class="input-group">
+                                    <span class="input-group-addon">80% Occupancy Rate</span>
+                                    <input type="number" id="eighty-percent" class="form-control" disabled>
+                                </div>
+                                <div class="input-group">
+                                    <span class="input-group-addon">90% Occupancy Rate</span>
+                                    <input type="number" id="ninety-percent" class="form-control" disabled>
                                 </div>
                             </div>
                         </div>
