add print function
added print button to print page

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                                 </div>
                                 <div class="input-group">
                                     <span class="input-group-addon">$</span>
-                                    <input type="number" id="tax" class="form-control" placeholder="Yearly Tax">   
+                                    <input type="number" id="tax" class="form-control" placeholder="Monthly Tax">   
                                 </div>
                                 <div class="input-group">
                                     <span class="input-group-addon">$</span>
@@ -79,7 +79,7 @@
                                     <span class="input-group-addon">$</span>
                                     <input type="number" id="utilities" class="form-control" placeholder="Monthly Utilities">  
                                 </div>
-                                <!--<div class="input-group">
+                                <!---<div class="input-group">
                                     <span class="input-group-addon">%</span>
                                     <input type="number" id="pm" class="form-control" placeholder="Property Management">   
                                 </div>-->
@@ -136,6 +136,9 @@
                                     <span class="input-group-addon">90% Occupancy Rate</span>
                                     <input type="number" id="ninety-percent" class="form-control" disabled>
                                 </div>
+                            </div>
+                            <div id="print">
+                                <button class="btn btn-dark btn-block">Print Results</button>
                             </div>
                         </div>
                     </div>
